--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mdfe/react-native-calendar",
-  "version": "0.12.6",
+  "version": "0.12.7",
   "description": "Simple Calendar Component for React Native",
   "main": "index.js",
   "repository": {
@@ -20,7 +20,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "moment": ">=2.10.3"
+    "moment": ">=2.10.3",
+    "prop-types": "^15.6.0"
   },
   "devDependencies": {
     "babel-eslint": "^4.1.6",
